--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,18 @@
     	<artifactId>spring-oxm</artifactId>
     	<version>4.0.0.RELEASE</version>
     </dependency>
+        <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+		<groupId>org.mockito</groupId>
+		<artifactId>mockito-all</artifactId>
+		<version>1.9.5</version>
+		<scope>test</scope>
+  	</dependency>
   </dependencies>
   <build>
     <finalName>FederatedIdentity</finalName>
