Added Resources/ directory and one static resource sun.png Added start of users/passwords page which goes through OpenID Connect to Ping at on localhost aliased as openidconnect.nevo.com (need to add to local hosts file) Requires SSL setup on local machine, port 8443, and Ping running as an IdP on port 9031. Paths are hardcoded.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,11 @@
   </servlet>
   
   <servlet-mapping>
+    <servlet-name>default</servlet-name>
+    <url-pattern>/Resources/*</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
   	<servlet-name>federatedIdentityServlet</servlet-name>
   	<url-pattern>/</url-pattern>
   </servlet-mapping>
