--- a/pom.xml
+++ b/pom.xml
@@ -35,12 +35,7 @@
 			<artifactId>mongo-java-driver</artifactId>
 			<version>2.7.3</version>
 		</dependency>
-<!-- 		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-mapper-asl</artifactId>
-			<version>1.4.1</version>
-		</dependency>
- -->		<dependency>
+		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.9.10</version>
